[gd_scene load_steps=12 format=3 uid="uid://8mxejgpxt2mj"]

[ext_resource type="Script" path="res://select_catergory_menu.gd" id="1_5c3e0"]
[ext_resource type="Texture2D" uid="uid://bf7popw72ob6k" path="res://Assets/Main Menu Background (Blurred).png" id="2_pyff0"]
[ext_resource type="Texture2D" uid="uid://b3i8cg4h4lj0r" path="res://Assets/Select Category.png" id="3_vdbhf"]
[ext_resource type="Texture2D" uid="uid://bm03p1gb1jevt" path="res://Assets/Present Tense Button.png" id="4_mgpu0"]
[ext_resource type="Texture2D" uid="uid://b3celbo80jjf8" path="res://Assets/Past Tense Button.png" id="5_n2c4a"]
[ext_resource type="Texture2D" uid="uid://3uluuiqmla3m" path="res://Assets/Continous Tense Button.png" id="6_q4ba0"]
[ext_resource type="Texture2D" uid="uid://x0kpc2sds517" path="res://Assets/Perfect Tense Button.png" id="7_ryy43"]

[sub_resource type="Theme" id="Theme_blnr8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_eocrf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tmbst"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4au0p"]

[node name="SelectCatergoryMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5c3e0")
tween_intensity = 1.1
tween_duration = 0.3

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_pyff0")

[node name="Title" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -391.5
offset_top = 60.0
offset_right = 391.5
offset_bottom = 220.0
grow_horizontal = 2
size_flags_horizontal = 4
texture = ExtResource("3_vdbhf")
stretch_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -389.0
offset_top = -40.0
offset_right = 389.0
offset_bottom = 258.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="PresentTenseButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_blnr8")
theme_override_colors/icon_pressed_color = Color(0.45098, 0.45098, 0.45098, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_eocrf")
icon = ExtResource("4_mgpu0")
flat = true
icon_alignment = 1

[node name="PastTenseButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_blnr8")
theme_override_colors/icon_pressed_color = Color(0.45098, 0.45098, 0.45098, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_eocrf")
icon = ExtResource("5_n2c4a")
flat = true
icon_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="ContinousTenseButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_colors/icon_pressed_color = Color(0.45098, 0.45098, 0.45098, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_tmbst")
icon = ExtResource("6_q4ba0")
flat = true

[node name="PerfectTenseButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_colors/icon_pressed_color = Color(0.45098, 0.45098, 0.45098, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_4au0p")
icon = ExtResource("7_ryy43")
flat = true

[connection signal="pressed" from="VBoxContainer/HBoxContainer/PresentTenseButton" to="." method="_on_present_tense_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/PastTenseButton" to="." method="_on_past_tense_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/ContinousTenseButton" to="." method="_on_continous_tense_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/PerfectTenseButton" to="." method="_on_perfect_tense_button_pressed"]
